syntax = "proto3";
package lorenzo.bnblightclient.v1;

import "gogoproto/gogo.proto";

option go_package = "github.com/Lorenzo-Protocol/lorenzo/x/bnblightclient/types";

// Params defines the parameters for the module.
message Params {
  option (gogoproto.equal) = true;

  bytes chain_id = 1 [ (gogoproto.customtype) = "cosmossdk.io/math.Uint" ];
  // the stake plan hub contract address
  string stake_plan_hub_address = 2;
  // the maximum number of bnb block headers to retain
  uint64 retained_blocks = 3;
  // list of people who can upload bnb block header information
  repeated string allow_list = 4;
}